--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div> 
+        <h3>My First Website</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ab deserunt officia distinctio quod ipsum, earum quaerat officiis delectus, nam, tenetur fugit modi nostrum. Non, soluta vero. Perferendis, quis dolores.
+        </p>
+    </div>
 </body>
 </html>
