--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ab deserunt officia distinctio quod ipsum, earum quaerat officiis delectus, nam, tenetur fugit modi nostrum. Non, soluta vero. Perferendis, quis dolores.
         </p>
     </div>
+    <div> 
+        <h3>My second Website</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ab deserunt officia distinctio quod ipsum, earum quaerat officiis delectus, nam, tenetur fugit modi nostrum. Non, soluta vero. Perferendis, quis dolores.
+        </p>
+    </div>
+    <div> 
+        <h3>My thidr Website</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ab deserunt officia distinctio quod ipsum, earum quaerat officiis delectus, nam, tenetur fugit modi nostrum. Non, soluta vero. Perferendis, quis dolores.
+        </p>
+    </div>
 </body>
 </html>
