--- a/index.html
+++ b/index.html
@@ -25,5 +25,15 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ab deserunt officia distinctio quod ipsum, earum quaerat officiis delectus, nam, tenetur fugit modi nostrum. Non, soluta vero. Perferendis, quis dolores.
         </p>
     </div>
+    <div>
+        <h3>
+            How to push incremantel
+        </h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m""</li>
+        <li>git push</li>
+    </ul>
+    </div>
 </body>
 </html>
