--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@
         <li>git push</li>
     </ul>
     </div>
+    <div>
+        <h3>kimkim</h3>
+        <img src="images/pexels-craig-adderley-1563356.jpg" alt="">
+    </div>
 </body>
 </html>
